--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html{
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 200;
     font-family:  sans-serif;
     /*font-size: 62.5%;*/
@@ -21,26 +21,48 @@ html{
 }
 
 .main-top{
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: auto;
     text-align: justify;
     padding: 15px; 
+    margin: 15px;
+    border-radius: 25%;
     background-color: rgb(175, 228, 228);
 }
 
 .main-bottom{
     text-align: left;
-    width: 300px;
-    height: 150px;
+    width: 400px;
+    height: auto;
     padding: 15px;
+    margin: 15px;
     background-color: bisque;
     list-style-position: inside;
+    border-radius: 25%;
 }
 
 h1,
-h3{
+h3,
+h2{
     text-align: center;
 }
 
+.ingredients{
+    width: 600px;
+    height: auto;
+    background-color: rgb(153, 184, 140);
+    list-style-position: inside;
+    text-align: left;
+    padding: 15px;
+    margin: 15px;
+}
 
-
+.instructions{
+    width: 600px;
+    height: auto;
+    background-color: rgb(124, 197, 240);
+    list-style-position: inside;
+    text-align: left;
+    padding: 15px;
+    margin: 15px;
+}
